# Lightning-hydra

./: .dockerignore  .env.example  .gitignore  CL_Distil.md  CL_Distil_Eval.md  Dockerfile  Project_Structure.md  README.md  README.txt  REPLAY_BALANCE_CLASS_STRATEGY.md  REPLAY_MODULE_README.md  docker-bake.hcl  example_replay_usage.py  gaussian_augmentor_example.py  main.py  make_protocol.py  migrate_wandb_to_mlflow.py  misclassify_analysis.py  persistent_inference_service_spec.md  print_avalanche_modules.py  program.md  pyproject.toml  requirements.txt  test.md  test.py  test_command.sh  tmp_config.md  tmp_results_echo_autune_amp_v2.txt
configs/: eval_aasist_multiview.yaml  eval_cyberaicup2.yaml  train.yaml
continual_learning/: README.md  requirements.txt
docs/: persistent_benchmark_service_architecture.md  persistent_benchmark_service_usage.md
fairseq_lib/: setup.py
notebooks/: analyze.ipynb  asvspoof-challenge-2021  chapter_a3_pretrained_vocoders.ipynb  eval.ipynb  eval.py  eval_balanced_eer.py  eval_fixed.py  evaluation_results.json  fusion.ipynb  inference.ipynb  misclassify_analysis.py  pre_processing.ipynb  prepare_balanced_dataset.py  prepare_benchmark_datasets.ipynb  prepare_dataset.ipynb  proper_lora_loading_with_modules_to_save.py  test copy.py  test.ipynb  test.py  trim_librosa.py  tsne_conformertcm_baseline_clean.ipynb  tsne_conformertcm_baseline_clean_v2.ipynb  visualize.ipynb  working_lora_solution.py
notes/: 2025_Aug_1.md  2025_Aug_8.md  2025_Dec_19.md  2025_July.md  2025_July_24.md  2025_July_28.md  2025_July_30.md  2025_June.md  2025_KDADD.md  (+6 more)
(+975 files in other folders)
